kubernetes/caddy-clientes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-proxy
  labels: 
    app: clientes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: clientes
  template:
    metadata:
      labels:
        app/aos-grupo9-default: "true"
        app: clientes
    spec:
      containers:
        - name: caddy-proxy
          image: caddy:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/etc/caddy"
              name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: caddy-pvc
