kubernetes/caddy-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-proxy
  labels: 
    app: caddy-proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: caddy-proxy
  template:
    metadata:
      labels:
        app/aos-grupo9-default: "true"
        app: caddy-proxy
    spec:
      containers:
        - name: caddy-proxy
          image: caddy:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/etc/caddy"
              name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: caddy-pvc
