kubernetes/caddy-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-proxy
spec:
  type: NodePort
  selector:
    app: caddy-proxy
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30010
