kubernetes/clientes-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientes-backend
spec:
  selector:
    io.kompose.service: aos2023_clientes_mock
  ports:
    - port: 4010
      targetPort: 4010
  type: ClusterIP
