kubernetes/clientes-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientes-frontend
spec:
  selector:
    io.kompose.service: aos2023_clientes_ui
  ports:
    - port: 8000
      targetPort: 8080
  type: ClusterIP
