kubernetes/facturas-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facturas-backend
spec:
  selector:
    io.kompose.service: aos2023_facturas_mock
  ports:
    - port: 4012
      targetPort: 4010
  type: ClusterIP
