kubernetes/facturas-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facturas-frontend
spec:
  selector:
    io.kompose.service: aos2023_facturas_ui
  ports:
    - port: 8002
      targetPort: 8080
  type: ClusterIP
