kubernetes/logs-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logs-backend
spec:
  selector:
    io.kompose.service: aos2023_logs_mock
  ports:
    - port: 4011
      targetPort: 4010
  type: ClusterIP
