kubernetes/logs-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logs-frontend
spec:
  selector:
    io.kompose.service: aos2023_logs_ui
  ports:
    - port: 8001
      targetPort: 8080
  type: ClusterIP
