kubernetes/notificaciones-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificaciones-frontend
spec:
  selector:
    io.kompose.service: aos2023_notificaciones_ui
  ports:
    - port: 8003
      targetPort: 8080
  type: ClusterIP
