kubernetes/recambios-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recambios-backend
spec:
  selector:
    io.kompose.service: aos2023_recambios_mock
  ports:
    - port: 4014
      targetPort: 4010
  type: ClusterIP
