kubernetes/recambios-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recambios-frontend
spec:
  selector:
    io.kompose.service: aos2023_recambios_ui
  ports:
    - port: 8004
      targetPort: 8080
  type: ClusterIP
