kubernetes/trabajos-backend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: trabajos-backend
spec:
  selector:
    io.kompose.service: aos2023_trabajos_mock
  ports:
    - port: 4015
      targetPort: 4010
  type: ClusterIP
