kubernetes/trabajos-frontend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: trabajos-frontend
spec:
  selector:
    io.kompose.service: aos2023_trabajos_ui
  ports:
    - port: 8005
      targetPort: 8080
  type: ClusterIP
