kubernetes/vehiculos-backend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehiculos-backend
spec:
  selector:
    io.kompose.service: aos2023_vehiculos_mock
  ports:
    - port: 4016
      targetPort: 4010
  type: ClusterIP
