kubernetes/vehiculos-frontend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehiculos-frontend
spec:
  selector:
    io.kompose.service: aos2023_vehiculos_ui
  ports:
    - port: 8006
      targetPort: 8080
  type: ClusterIP
